# django-oauth-toolkit

./: .gitignore  .readthedocs.yml  AGENTS.md  AUTHORS  CHANGELOG.md  Dockerfile  MANIFEST.in  README.rst  codecov.yml  docker-compose.mysql-pr.yml  docker-compose.mysql.yml  docker-compose.postgres-pr.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  tox.ini
.claude/skills/work-pr/: SKILL.md
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: release.yml  test.yml
comparison/: README.md  idp-op-comparison.md  index.html  rp-comparison.md  rs-comparison.md  suite-membership.md  suite-rollup.md
docker/mysql-init/: 01-test-db-grants.sql
docker/postgres-pr-init/: 01-create-replication-user.sql  02-configure-replication-hba.sh
docs/: advanced_topics.rst  cimd.rst  compliance.rst  conf.py  contributing.rst  getting_started.rst  glossary.rst  index.rst  jwt_access_tokens.rst  jwt_bearer_grant.rst  management_commands.rst  ninja.rst  oauth2_server_metadata.rst  oidc.rst  package_layout.rst  protected_resource_metadata.rst  pushed_authorization_requests.rst  requirements.txt  resource_server.rst  rfc7523.rst  security.rst  settings.rst
docs/adr/: 0001-authorization-and-session-entities.md  0001-entity-model-erds.md  0001-entity-model-revision.md
docs/tutorial/: tutorial_01.rst  tutorial_02.rst  tutorial_06.rst
docs/views/: class_based.rst  details.rst  dynamic_client_registration.rst  mixins.rst  views.rst
oauth2_provider/: admin.py  apps.py  backends.py  bcp.py  checks.py  cimd.py  client_assertions.py  compat.py  dcr.py  decorators.py  exceptions.py  forms.py  handlers.py  http.py  middleware.py  models.py  oauth2_backends.py  oauth2_grants.py  oauth2_servers.py  oauth2_validators.py  par.py  rfc7523.py  safe_fetch.py  scopes.py  settings.py  signals.py  urls.py  utils.py  validators.py  www_authenticate.py
oauth2_provider/authorization_server/: __init__.py  admin.py  bcp.py  cimd.py  dcr.py  forms.py  urls.py
oauth2_provider/authorization_server/oidc/: __init__.py  mixins.py  urls.py  views.py
oauth2_provider/authorization_server/views/: __init__.py  application.py  base.py  device.py  dynamic_client_registration.py  introspect.py  metadata.py  mixins.py  token.py
oauth2_provider/contrib/ninja/: __init__.py  security.py
oauth2_provider/contrib/rest_framework/: __init__.py  authentication.py  permissions.py
oauth2_provider/core/: __init__.py  backends_oauthlib.py  bcp.py  checks.py  scopes.py  views.py
oauth2_provider/management/commands/: clearcimdapplications.py
oauth2_provider/migrations/: 0006_alter_application_client_secret.py  0012_add_token_checksum.py  0013_alter_application_authorization_grant_type_device.py  0013_alter_refreshtoken_token.py  0014_application_backchannel_logout_uri.py  0014_grant_resource.py  0015_accesstoken_resource.py  0015_application_backchannel_logout_uri.py  0015_refreshtoken_token_checksum.py  0015_remove_duplicate_devicegrant_constraint.py  0015_resource_indicators.py  0016_alter_devicegrant_scope.py  0017_application_dcr_created.py  0017_authorization.py  0018_resource_indicators.py  0018_session.py  0019_application_registration_source.py  0019_cimd_application_fields.py  0020_cimd_application_fields.py  0021_application_client_assertion_fields.py  0021_application_jwt_access_token.py  0021_pushed_authorization_requests.py  0022_alter_application_authorization_grant_type.py
oauth2_provider/resource_server/: __init__.py  backends.py  decorators.py  middleware.py  mixins.py  urls.py  validators.py  www_authenticate.py
oauth2_provider/resource_server/views/: __init__.py  generic.py  metadata.py
oauth2_provider/templates/oauth2_provider/: application_detail.html  application_form.html  check_session_iframe.html
oauth2_provider/views/: __init__.py  application.py  base.py  device.py  dynamic_client_registration.py  generic.py  introspect.py  metadata.py  mixins.py  oidc.py  par.py  token.py
plans/: fable-review.md
rfcs/: README.md  draft-ietf-oauth-client-id-metadata-document-01.txt  rfc8707.txt  rfc9126.txt  rfc9728.txt
tests/: common_testing.py  conftest.py  models.py  multi_db_settings.py  mysql_mig_settings.py  mysql_pr_mig_settings.py  mysql_pr_settings.py  mysql_settings.py  non_default_db_settings.py  postgres_mig_settings.py  postgres_pr_mig_settings.py  postgres_pr_router.py  postgres_pr_settings.py  postgres_settings.py  presets.py  settings.py  settings_swapped.py  test_admin.py  test_application_views.py  test_auth_backends.py  test_authorization.py  test_authorization_code.py  test_backchannel_logout.py  test_bcp_rfc9700.py  test_cimd.py  test_client_assertions.py  test_dcr_views.py  test_decorators.py  test_device.py  test_django_checks.py  test_hybrid.py  test_import_compat.py  test_introspection_auth.py  test_introspection_view.py  test_jwt_access_token.py  test_jwt_bearer_grant.py  test_migration_0012_hang.py  test_migration_db_alias.py  test_mixins.py  test_models.py  (+24 more)
tests/app/: README.md
tests/app/idp/: pyproject.toml  requirements.txt
tests/app/idp/fixtures/: e2e_seed.json  seed.json
tests/app/idp/idp/: apps.py  cimd.py  oauth.py  settings.py  urls.py
tests/app/idp/templates/home/: index.html
tests/app/rp/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
tests/e2e/: README.md  compliance.py  conftest.py  constants.py
tests/migrations/: 0008_sampledevicegrant.py  0009_custompkaccesstoken_and_more.py  0010_refreshtoken_token_checksum.py  0011_alter_basetestapplication_allowed_origins_and_more.py  0012_alter_sampledevicegrant_scope.py  0013_authorization.py  0013_basetestapplication_dcr_created_and_more.py  0014_custompkaccesstoken_resource_and_more.py  0015_registration_source.py  0016_basetestapplication_cimd_expires_at_and_more.py  0017_basetestapplication_jwt_access_token_and_more.py  0017_basetestapplication_require_pushed_authorization_requests_and_more.py  0017_testapps_client_assertion_fields.py  0018_alter_basetestapplication_authorization_grant_type_and_more.py
(+37 files in other folders)
