[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-oauth-toolkit"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  {name = "Federico Frenguelli"},
  {name = "Massimiliano Pippi"},
  {email = "synasius@gmail.com"},
]
description = "OAuth2 Provider for Django"
keywords = ["django", "oauth", "oauth2", "oauthlib"]
license = {file = "LICENSE"}
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 4.2",
	"Framework :: Django :: 5.0",
	"Framework :: Django :: 5.1",
	"Framework :: Django :: 5.2",
	"Framework :: Django :: 6.0",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Topic :: Internet :: WWW/HTTP",
]
dependencies = [
	"django >= 4.2",
	"requests >= 2.13.0",
	"urllib3 >= 1.26",
	"oauthlib >= 3.3.0",
	"jwcrypto >= 1.5.0",
]

[project.optional-dependencies]
dev = [
	"myst-parser",
	"sphinx==7.2.6",
	"sphinx-rtd-theme==2.0.0",
	"djangorestframework",
	"django-ninja",
	"coverage",
	"pytest",
	"pytest-cov",
	"pytest-django",
	"pytest-xdist",
	"pytest-mock",
	"ruff",
]
docs = [
	"myst-parser",
	"sphinx==7.2.6",
	"sphinx-rtd-theme==2.0.0",
]
test = [
	"djangorestframework",
	"django-ninja",
	"coverage",
	"pytest",
	"pytest-cov",
	"pytest-django",
	"pytest-xdist",
	"pytest-mock",
]

[project.urls]
Homepage = "https://django-oauth-toolkit.readthedocs.io/"
Repository = "https://github.com/django-oauth/django-oauth-toolkit"

[tool.setuptools.dynamic]
version = {attr = "oauth2_provider.__version__"}

[tool.setuptools.packages.find]
include = ["oauth2_provider", "oauth2_provider.*"]

# Ref: https://github.com/codespell-project/codespell#using-a-config-file
[tool.codespell]
skip = '.git,package-lock.json,locale,AUTHORS,tox.ini,rfcs'
check-hidden = true
ignore-regex = '.*pragma: codespell-ignore.*'
ignore-words-list = 'assertIn'

[tool.coverage.run]
source = ["oauth2_provider"]
omit = ["*/migrations/*"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
django_find_project = false
addopts = [
    # Run the suite in parallel across all available cores. pytest-xdist is a
    # declared test dependency; pytest-cov combines per-worker coverage data at the
    # end, so coverage (enabled only on the designated cell via PYTEST_ADDOPTS in
    # tox) still works under xdist.
    #
    # `--dist loadfile` keeps every test in a given file on the same worker and runs
    # them in collection order. Several test modules mutate process-global state
    # (e.g. swapping OAUTH2_PROVIDER_ACCESS_TOKEN_MODEL via override_settings), so the
    # suite relies on within-file ordering; loadfile preserves that while still
    # parallelizing across files.
    "-n", "auto",
    "--dist", "loadfile",
    # The black-box end-to-end / compliance suite boots a live server and is run
    # separately via `tox -e e2e` (which clears addopts). Keep it out of the
    # in-process unit-test collection.
    "--ignore=tests/e2e",
]
markers = [
    "oauth2_settings: Custom OAuth2 settings to use - use with oauth2_settings fixture",
    "nologinrequiredmiddleware",
    # End-to-end / compliance suite (tests/e2e) markers.
    "compliance: bind a test to a specification requirement (spec, section, requirement)",
    "deprecated: flow discouraged by OAuth 2.1 (implicit, ROPC)",
    "browser: requires a real browser (Playwright) + the SvelteKit RP",
    "spec_rfc6749: RFC 6749 (OAuth 2.0 core grants)",
    "spec_rfc7636: RFC 7636 (PKCE)",
    "spec_rfc7009: RFC 7009 (token revocation)",
    "spec_rfc7662: RFC 7662 (token introspection)",
    "spec_rfc8414: RFC 8414 (authorization server metadata)",
    "spec_rfc9728: RFC 9728 (protected resource metadata)",
    "spec_rfc8628: RFC 8628 (device authorization grant)",
    "spec_rfc7591: RFC 7591/7592 (dynamic client registration)",
    "spec_rfc7523: RFC 7523 (JWT client assertions: private_key_jwt / client_secret_jwt)",
    "spec_cimd: OAuth Client ID Metadata Documents (draft-ietf-oauth-client-id-metadata-document)",
    "spec_oidc_core: OpenID Connect Core 1.0",
    "spec_oidc_discovery: OpenID Connect Discovery 1.0",
    "spec_oidc_rp_logout: OpenID Connect RP-Initiated Logout 1.0",
    "spec_browser_rp: Browser RP (SvelteKit) end-to-end",
]

[tool.ruff]
line-length = 110
exclude = [".tox", "build/", "dist/", "docs/", "oauth2_provider/migrations/", "tests/migrations/", "manage.py", "rfcs/"]

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["oauth2_provider"]

[tool.uv.workspace]
members = [
    "tests/app/idp",
]
